tests/error/double_move.bz
// error: variable 'i' has been moved, and is no longer usable
// note: variable was moved here
function test()
{
	let i = 0;
	move i + move i;
}
